syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hospital.nutritionalinformation";
option java_outer_classname = "ContinuousAssessment";

// Defining a gRPC service
service NutritionalInformationService {

  // A unary RPC method called nutriInformation that takes a NutriInformationRequest and returns a NutriInformationResponse
  rpc nutriInformation(NutriInformationRequest) returns (NutriInformationResponse) {}

 // An unary RPC method called mealRanking that takes a MealRankingRequest and returns a MealRankingResponse
  rpc mealRanking(MealRankingRequest) returns (MealRankingResponse) {}

  // A server-streaming RPC method called microNutrientStats that takes a stream of MicroNutrientStatsRequest and returns a stream of MicroNutrientStatsResponse
  rpc microNutrientStats(stream MicroNutrientStatsRequest) returns (stream MicroNutrientStatsResponse) {}
}

// Message for the nutriInformation method request
message NutriInformationRequest {
  int32 meal_number = 1; // Define a required field for meal number with field number 1
}

// Message for the nutriInformation method response
message NutriInformationResponse {
  string meal_ingredients = 1; // Define a required field for meal ingredients with field number 1
}

// Message for the mealRanking method request
message MealRankingRequest {
  int32 meal_type = 1; // Define a required field for meal type with field number 1
}

// Message for the mealRanking method response
message MealRankingResponse {
  float avg_rating = 1; // Define a required field for average rating with field number 1
}

// Message for the microNutrientStats method request
message MicroNutrientStatsRequest {
  repeated int32 meal_numbers = 1; // Define a repeated field for meal numbers with field number 1
}

// Message for the microNutrientStats method response
message MicroNutrientStatsResponse {
  // Defining a nested message for nutrient information
  message NutrientInfo {
    string nutrient_name = 1; // A required field for nutrient name 
    float nutrient_value = 2; // A required field for nutrient value 
  }
  repeated NutrientInfo nutrient_infos = 1; // Defining a repeated field for nutrient information
}